Fixed missalignes transcript

--- a/cernyrobin_django/static/universal2v7.css
+++ b/cernyrobin_django/static/universal2v7.css
@@ -1193,7 +1193,15 @@ nav *{
 /*   padding-left: 50px; */
 }
 
+#transcript-center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
 
+}
 
 
 .copy-popup {
